<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Casa</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tab_login">Setup</string>

    <string name="register_username">Username</string>
    <string name="register_username_helper">3 to 16 characters</string>

    <string name="register_password">Password</string>
    <string name="register_password_helper">One number, one special character: ! @ # $ % &amp;</string>

    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_confirm_password_helper">Match password above</string>


    <string name="register_button">Register</string>

    <string name="register_email">Email</string>
    <string name="register_email_helper">Email must be verified later</string>
    <string name="camera_switch">switch camera</string>


</resources>
