<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.example.kash.casa.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_username"
                android:layout_gravity="center_horizontal"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1"
                app:baseColor="@color/primary_text"
                app:primaryColor="?colorPrimary"
                app:minCharacters="3"
                app:maxCharacters="16"
                app:helperText="@string/register_username_helper"
                app:helperTextColor="@color/secondary_text"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/register_email"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                app:baseColor="@color/primary_text"
                app:primaryColor="?colorPrimary"
                app:helperText="@string/register_email_helper"
                app:helperTextColor="@color/secondary_text"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/register_password"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                app:baseColor="@color/primary_text"
                app:primaryColor="?colorPrimary"
                app:minCharacters="8"
                app:maxCharacters="20"
                app:helperText="@string/register_password_helper"
                app:helperTextColor="@color/secondary_text" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/register_password_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/register_confirm_password"
                android:ems="10"
                android:layout_gravity="center_horizontal"
                app:baseColor="@color/primary_text"
                app:primaryColor="?colorPrimary"
                app:helperText="@string/register_confirm_password_helper"
                app:helperTextColor="@color/secondary_text"/>

            <Button
                android:id="@+id/register_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/register_button"
                android:textColor="@color/icons"
                android:textSize="@dimen/text_size_button_material"
                android:background="@drawable/custom_flat_btn"/>


        </LinearLayout>
    </ScrollView>
</LinearLayout>